[package]
name = "jam"
version = "0.1.0"
edition = "2021"

[dependencies]
percent-encoding = "2.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
sha1 = "0.10.6"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.2"
